# Sort_Quick_Merge_Intro

./: CMakeLists.txt  README.md
inc/: Display.h  Drugi.h  Exchange.h  IntroSort.h  Kurwat.h  Main.h  MergeSort.h  QuickSort.h  Rozmiar.h  SortCheck.h  TabFill.h  Tablica.h
src/: Display.cpp  Drugi.cpp  Kurwat.cpp  Main.cpp  TabFill.cpp
